--- a/html/css/pit.css
+++ b/html/css/pit.css
@@ -1,12 +1,68 @@
+
+html,
 body {
-  font-size: .875rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+  background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
 }
+
+
 
 .feather {
   width: 16px;
   height: 16px;
   vertical-align: text-bottom;
 }
+
+
+.container {
+  max-width: 960px;
+}
+
+
+
+
+
+.intro-header {
+  max-width: 700px;
+}
+
+
+
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
+.form-signin .checkbox {
+  font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+
+
 
 /*
  * Sidebar
@@ -15,11 +71,15 @@ body {
 .sidebar {
   position: fixed;
   top: 0;
+  /* rtl:raw:
   right: 0;
+  */
   bottom: 0;
+  /* rtl:remove */
+  left: 0;
   z-index: 100; /* Behind the navbar */
   padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset 1px 0 0 rgba(0, 0, 0, .1);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
 @media (max-width: 767.98px) {
@@ -43,7 +103,7 @@ body {
 }
 
 .sidebar .nav-link .feather {
-  margin-left: 4px;
+  margin-right: 4px;
   color: #727272;
 }
 
@@ -70,12 +130,12 @@ body {
   padding-bottom: .75rem;
   font-size: 1rem;
   background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset 1px 0 0 rgba(0, 0, 0, .25);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
 
 .navbar .navbar-toggler {
   top: .25rem;
-  left: 1rem;
+  right: 1rem;
 }
 
 .navbar .form-control {
@@ -94,3 +154,4 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
